--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "next": "14.1.0",
     "next-themes": "^0.2.1",
     "react": "^18",
+    "react-countup": "^6.5.0",
     "react-dom": "^18",
     "react-icons": "^5.0.1",
     "sonner": "^1.4.0",
