--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "embla-carousel-autoplay": "^8.0.0",
     "embla-carousel-react": "^8.0.0",
     "framer-motion": "^11.0.8",
+    "lightgallery": "^2.7.2",
     "lucide-react": "^0.335.0",
     "next": "14.1.0",
     "next-themes": "^0.2.1",
@@ -25,6 +26,8 @@
     "react-countup": "^6.5.0",
     "react-dom": "^18",
     "react-icons": "^5.0.1",
+    "react-masonry-css": "^1.0.16",
+    "react-responsive-masonry": "^2.2.0",
     "sonner": "^1.4.0",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7"
@@ -33,6 +36,7 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/react-responsive-masonry": "^2.1.3",
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
     "eslint-config-next": "14.1.0",
