--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-countup": "^6.5.0",
     "react-dom": "^18",
     "react-icons": "^5.0.1",
+    "react-instagram-embed": "^3.0.0",
     "react-masonry-css": "^1.0.16",
     "react-responsive-masonry": "^2.2.0",
     "sonner": "^1.4.0",
