--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "embla-carousel-autoplay": "^8.0.0",
     "embla-carousel-react": "^8.0.0",
     "framer-motion": "^11.0.8",
+    "leaflet": "^1.9.4",
+    "leaflet-defaulticon-compatibility": "^0.1.2",
     "lightgallery": "^2.7.2",
     "lucide-react": "^0.335.0",
     "next": "14.1.0",
@@ -26,7 +28,7 @@
     "react-countup": "^6.5.0",
     "react-dom": "^18",
     "react-icons": "^5.0.1",
-    "react-instagram-embed": "^3.0.0",
+    "react-leaflet": "^4.2.1",
     "react-masonry-css": "^1.0.16",
     "react-responsive-masonry": "^2.2.0",
     "sonner": "^1.4.0",
