--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "lucide-react": "^0.335.0",
     "next": "14.1.0",
     "next-themes": "^0.2.1",
+    "nodemailer": "^6.9.13",
+    "nodemailer-mailgun-transport": "^2.1.5",
     "react": "^18",
     "react-countup": "^6.5.0",
     "react-dom": "^18",
@@ -42,6 +44,8 @@
   },
   "devDependencies": {
     "@types/node": "^20",
+    "@types/nodemailer": "^6.4.14",
+    "@types/nodemailer-mailgun-transport": "^1.4.6",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@types/react-responsive-masonry": "^2.1.3",
