--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-select": "^2.1.0",
     "@radix-ui/react-slot": "^1.0.2",
     "axios": "^1.6.7",
     "class-variance-authority": "^0.7.0",
@@ -25,7 +26,7 @@
     "leaflet-defaulticon-compatibility": "^0.1.2",
     "lightgallery": "^2.7.2",
     "lucide-react": "^0.335.0",
-    "next": "14.1.0",
+    "next": "^14.2.3",
     "next-themes": "^0.2.1",
     "nodemailer": "^6.9.13",
     "nodemailer-mailgun-transport": "^2.1.5",
