--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "lightgallery": "^2.7.2",
     "lucide-react": "^0.335.0",
     "next": "^14.2.3",
+    "next-auth": "^5.0.0-beta.20",
     "next-themes": "^0.2.1",
     "nodemailer": "^6.9.13",
     "nodemailer-mailgun-transport": "^2.1.5",
