--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.3.4",
+    "@prisma/client": "^5.18.0",
     "@radix-ui/react-accordion": "^1.1.2",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
@@ -26,8 +27,8 @@
     "leaflet-defaulticon-compatibility": "^0.1.2",
     "lightgallery": "^2.7.2",
     "lucide-react": "^0.335.0",
-    "next": "^14.2.3",
-    "next-auth": "^5.0.0-beta.20",
+    "next": "^14.2.6",
+    "next-auth": "^4.24.7",
     "next-themes": "^0.2.1",
     "nodemailer": "^6.9.13",
     "nodemailer-mailgun-transport": "^2.1.5",
@@ -55,6 +56,7 @@
     "eslint": "^8",
     "eslint-config-next": "14.1.0",
     "postcss": "^8",
+    "prisma": "^5.18.0",
     "tailwindcss": "^3.3.0",
     "typescript": "^5"
   }
